--- a/app/globals.css
+++ b/app/globals.css
@@ -251,6 +251,11 @@ input[type="number"] {
     url(/assets/images/project-leagueone.png);
 }
 
+.projectCarouselImg.skyliving {
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0) 50%),
+    url(/assets/images/project-skyliving.jpg);
+}
+
 .projectCarouselImg.prakriti {
   background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0) 50%),
     url(/assets/images/project-prakriti.png);
@@ -280,6 +285,10 @@ input[type="number"] {
 
 .projectCarouselImg.leagueone::after {
   background-image: url(/assets/images/leagueone-batch.jpg);
+}
+
+.projectCarouselImg.skyliving::after {
+  background-image: url(/assets/images/skyliving-batch.jpg);
 }
 
 .projectCarouselImg.prakriti::after {
@@ -733,6 +742,7 @@ input[type="number"] {
   justify-content: center;
   justify-content: space-around;
 }
+
 .left-container {
   text-align: start;
   width: 54%;
@@ -744,23 +754,27 @@ input[type="number"] {
     flex-direction: column;
     justify-content: center;
   }
+
   .left-container {
     text-align: start;
     width: 100%;
     padding: 30px;
   }
 }
+
 @media (max-width: 820px) {
   .demo-blog-cointainer {
     flex-direction: column;
     justify-content: center;
   }
+
   .left-container {
     text-align: start;
     width: 100%;
     padding: 30px;
   }
 }
+
 .paraDiv {
   width: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -771,10 +785,12 @@ input[type="number"] {
   display: flex;
   width: 100%;
 }
+
 .blogContent-left {
   width: 70%;
   margin-left: 40px;
 }
+
 .blogContent-right {
   padding: 30px;
   width: 30%;
@@ -782,6 +798,7 @@ input[type="number"] {
   position: absolute;
   text-align: center;
 }
+
 .bottom-cont2-point {
   /* padding: 30px; */
   display: flex;
@@ -806,6 +823,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .middle-display {
   display: flex;
   justify-content: center;
@@ -823,7 +841,7 @@ input[type="number"] {
 }
 
 
-.cont3-middle-display{
+.cont3-middle-display {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -835,6 +853,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-display-one {
   display: flex;
   justify-content: center;
@@ -851,14 +870,16 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 @media (max-width: 768px) {
   .recent-post-display-one {
-  width: 300px;
+    width: 300px;
   }
 }
+
 @media (max-width: 768px) {
   .blog-titles {
-  width: 60%;
+    width: 60%;
   }
 }
 
@@ -878,6 +899,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-display-three {
   display: flex;
   justify-content: center;
@@ -894,6 +916,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-display-four {
   display: flex;
   justify-content: center;
@@ -910,6 +933,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-display-five {
   display: flex;
   justify-content: center;
@@ -926,6 +950,7 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-display-six {
   display: flex;
   justify-content: center;
@@ -942,19 +967,23 @@ input[type="number"] {
   background-size: cover;
   background-position: center;
 }
+
 .recent-post-content {
   width: 50%;
   font-weight: 800;
 }
+
 .blogfooter {
   margin-top: 50px;
 }
+
 .blogImgDiv {
   height: 70vh;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .top-cont {
   background-color: #d1d0d0;
   padding-left: 60px;
@@ -976,9 +1005,12 @@ input[type="number"] {
   border-radius: 20px;
   text-align: center;
 }
-@media (max-width: 768px) {.bottom-cont{
-  margin: 20px}
+
+@media (max-width: 768px) {
+  .bottom-cont {
+    margin: 20px
   }
+}
 
 .bottom-cont2-head {
   text-align: center;
@@ -995,6 +1027,7 @@ input[type="number"] {
   color: #ffff;
   font-weight: 900;
 }
+
 .bottom-cont2-pic {
   background-image: url(/assets/images/blogbannerimage.png);
 }
@@ -1003,10 +1036,12 @@ input[type="number"] {
   .bottom-cont2-head {
     width: 100%;
   }
+
   .bottom-cont2 {
     text-align: center;
   }
 }
+
 .bottom-cont2 {
   text-align: center;
   background-color: #086168;
@@ -1032,6 +1067,7 @@ input[type="number"] {
 .bottom-cont2-point:hover {
   transform: scale(1.05);
 }
+
 .right-cont-button {
   background-color: #008088;
   color: white;
@@ -1042,11 +1078,13 @@ input[type="number"] {
   transition: all 0.3s ease;
   font-weight: 600;
 }
+
 .right-cont-button:hover {
   background-color: white;
   color: #008088;
   transform: scale(1.05);
 }
+
 .right-b-cont-button {
   background-color: #008088;
   color: white;
@@ -1058,15 +1096,17 @@ input[type="number"] {
   font-weight: 600;
 }
 
-@media (max-width: 768px) {.right-b-cont-button {
-  width: 60vw;
+@media (max-width: 768px) {
+  .right-b-cont-button {
+    width: 60vw;
   }
-  }
+}
 
-  @media (max-width: 768px) {.bottom-cont2-and-head {
+@media (max-width: 768px) {
+  .bottom-cont2-and-head {
     margin: 15px;
-    }
-    }
+  }
+}
 
 .right-b-cont-button:hover {
   background-color: white;
@@ -1075,69 +1115,63 @@ input[type="number"] {
 }
 
 .blogImgDiv.svnRsnsForRptBldr {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/7-reasons-why-buy-your-apartment.jpg);
 }
 
 .blogImgDiv.dosAndDonts {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/dos-and-Donts-while-living-im-apartment.jpg);
 }
 
 .blogImgDiv.chsngRytColor {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/importance-of-color-choosing.jpg);
 }
 
 .blogImgDiv.keepEsntlRdy {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/Dream-house.jpg);
 }
 
 .blogImgDiv.whykatpakamprft {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/ponnamalle-bridge.jpg);
 }
-@media (max-width: 768px) {.blogImgDiv.whykatpakamprft{
-height: 300px;
-background-image: linear-gradient(
-  180deg,
-  rgba(0, 0, 0, 0.8) 0%,
-  rgba(0, 0, 0, 0) 100%
-),
-url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
-}
+
+@media (max-width: 768px) {
+  .blogImgDiv.whykatpakamprft {
+    height: 300px;
+    background-image: linear-gradient(180deg,
+        rgba(0, 0, 0, 0.8) 0%,
+        rgba(0, 0, 0, 0) 100%),
+      url(/assets/blogs/ponnamalle-bridge.jpg);
+    /* Mobile-specific image */
+  }
 }
 
 .blogImgDiv.click-to-view {
   background-image: url(/assets/images/click-to-view.png);
   cursor: pointer;
 }
-@media (max-width: 768px) {.blogImgDiv.click-to-view{
-  height: 300px;
-  background-image:url(/assets/images/click-to-view.png); /* Mobile-specific image */
+
+@media (max-width: 768px) {
+  .blogImgDiv.click-to-view {
+    height: 300px;
+    background-image: url(/assets/images/click-to-view.png);
+    /* Mobile-specific image */
   }
-  }
+}
 
 
 .blogImgDiv.kattupakkam-map {
@@ -1146,29 +1180,35 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   /* width: 75%;
   height: 70%; */
 }
+
 .blogImgDiv.peaceful-environment-with-green-spaces {
   background-image: url(/assets/images/Peaceful-Environment-with-Green-Spaces.jpg);
   width: 100%;
   height: 350px;
 }
+
 .blogImgDiv.Kattupakkam_growth {
   background-image: url(/assets/images/Kattupakkam_growth.jpg);
   width: 100%;
   /* height: 350px; */
 }
 
-@media (max-width: 768px) {.blogImgDiv.Kattupakkam_growth{
-  height: 300px;
-  background-image:
-  url(/assets/images/Kattupakkam_growth.jpg); /* Mobile-specific image */
+@media (max-width: 768px) {
+  .blogImgDiv.Kattupakkam_growth {
+    height: 300px;
+    background-image:
+      url(/assets/images/Kattupakkam_growth.jpg);
+    /* Mobile-specific image */
   }
-  }
+}
+
 :hover.click-to-view {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 100%;
   transform: scale(1.02);
   box-shadow: 0px 8px 16px #008089;
 }
+
 .click-to-know {
   font-size: x-large;
   color: "#000000";
@@ -1177,22 +1217,28 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   margin-left: 25px;
   cursor: pointer;
 }
-.click-to-know-Kattupakkam-growth{font-size: 20px;
+
+.click-to-know-Kattupakkam-growth {
+  font-size: 20px;
   color: "#000000";
   font-weight: 700;
-  cursor: pointer;}
-  
+  cursor: pointer;
+}
+
 @keyframes popEffect {
   0% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.1);
   }
+
   100% {
     transform: scale(1);
   }
 }
+
 .imageModal {
   position: fixed;
   top: 0;
@@ -1207,9 +1253,12 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   cursor: pointer;
 }
 
-@media (max-width: 768px) { /* Mobile view */
+@media (max-width: 768px) {
+
+  /* Mobile view */
   .modalContent {
-    width: 100%; /* Set relative size for smaller screens */
+    width: 100%;
+    /* Set relative size for smaller screens */
     height: 50%;
     margin-left: 10px;
     margin-right: -30px;
@@ -1221,6 +1270,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   max-height: 90%;
   border-radius: 8px;
 }
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -1233,6 +1283,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   align-items: center;
   z-index: 1000;
 }
+
 .modal-content {
   position: relative;
   padding: 20px;
@@ -1240,6 +1291,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 .close {
   position: absolute;
   top: 10px;
@@ -1247,6 +1299,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   font-size: 24px;
   cursor: pointer;
 }
+
 .fullImage {
   max-width: 60%;
   height: auto;
@@ -1254,21 +1307,18 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   display: flex;
   justify-content: left;
 }
+
 .blogImgDiv.undrCnstrtProp {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/benefits-construction-properties.jpg);
 }
 
 .blogImgDiv.tipsForByngHome {
-  background-image: linear-gradient(
-      180deg,
+  background-image: linear-gradient(180deg,
       rgba(0, 0, 0, 0.8) 0%,
-      rgba(0, 0, 0, 0) 100%
-    ),
+      rgba(0, 0, 0, 0) 100%),
     url(/assets/blogs/tips-for-buying-home.jpg);
 }
 
@@ -1350,24 +1400,20 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
 }
 
 .homeBannerSlider.hero1 {
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       #222222f0 8%,
       rgba(0, 0, 0, 0) 30%,
       rgba(0, 0, 0, 0) 60%,
-      rgba(0, 0, 0, 0.8) 106%
-    ),
+      rgba(0, 0, 0, 0.8) 106%),
     url(/assets/images/home-banner.png);
 }
 
 .homeBannerSlider.hero2 {
-  background: linear-gradient(
-      180deg,
+  background: linear-gradient(180deg,
       #222222f0 8%,
       rgba(0, 0, 0, 0) 30%,
       rgba(0, 0, 0, 0) 60%,
-      rgba(0, 0, 0, 0.8) 106%
-    ),
+      rgba(0, 0, 0, 0.8) 106%),
     url(/assets/images/partners.png);
 }
 
@@ -1587,6 +1633,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   right: 4rem;
   left: unset;
 }
+
 .highlighted {
   opacity: 0.5;
   /* Example: Reduce opacity to indicate hover */
@@ -1736,6 +1783,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
 }
 
 @media screen and (max-width: 768px) {
+
   .project-overview-section,
   .walk-through-section,
   .location-section {
@@ -1748,6 +1796,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
 }
 
 @media screen and (max-width: 425px) {
+
   .project-overview-section,
   .walk-through-section,
   .location-section {
@@ -1790,13 +1839,16 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   margin-bottom: 15px;
   overflow: hidden;
 }
+
 .league-one-amenities-image-container img {
   width: 100%;
   transition: transform 0.3s ease;
 }
+
 .league-one-amenities-image-container img:hover {
   transform: scale(1.05);
 }
+
 .league-one-amenities-image-container-overlay {
   position: absolute;
   bottom: 0;
@@ -1818,10 +1870,12 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   font-size: 32px;
   letter-spacing: 4px;
 }
+
 .general-amenities .bdr,
 .wellness-zone .bdr {
   border-bottom: 1px solid white;
 }
+
 .main-amenities ul,
 .general-amenities ul,
 .wellness-zone ul {
@@ -1829,31 +1883,38 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   flex-direction: column;
   gap: 4px;
 }
+
 .main-amenities li,
 .general-amenities li,
 .wellness-zone li {
   list-style: disc !important;
 }
+
 /* End League One Amenties  */
 /*  League One Home Slider  */
 .swiper-button-next,
 .swiper-button-prev {
   color: #ffffff !important;
 }
+
 .league-one-desk-banr {
   display: none;
 }
+
 .league-one-mob-banr {
   display: block;
 }
+
 @media (min-width: 420px) {
   .league-one-desk-banr {
     display: block;
   }
+
   .league-one-mob-banr {
     display: none;
   }
 }
+
 /* End League Home Slider  */
 .league-one-section {
   padding: 2em 1em;
@@ -1866,7 +1927,7 @@ url(/assets/blogs/ponnamalle-bridge.jpg); /* Mobile-specific image */
   }
 }
 
-.db-form{
+.db-form {
   margin-top: 40%;
   z-index: 1000;
 
